# lathegears

./: .gitmodules  CMakeLists.txt  common.h  control.c  control.h  encoder.c  encoder.h  encoder_multiplicator.c  encoder_multiplicator.h  main.c  screw.h  threads.c  threads.h
atmega328p/: main.c
calc/: calc.py
core/: CMakeLists.txt  common.h  config.h  control.c  control.h  encoder_multiplicator.c  encoder_multiplicator.h  interface.c  interface.h  threads.c  threads.h
display/: CMakeLists.txt  FixedMedium-8.bdf  display.c  display.h  font.c  font.h
display/tools/: generate_bitmap.py
drivers/: CMakeLists.txt
stm32f401/: CMakeLists.txt  config.h  display.c  driver_i2c.c  driver_i2c.h  keyboard.c  keyboard.h  main.c  ocd-launch.sh  stm32.ld
